ui improvements/agent
